# wontoo-fishing-analysis

./: .gitignore  CLAUDE.md  index.html  pyproject.toml
.claude/agents/: channel-finder.md  strategy-advisor.md  video-analyzer.md
.claude/commands/: run.md
output/: index.html  원투낚시_알고리즘_분석.html
scripts/: 01_discover_channels.py  02_collect_videos.py  03_extract_subtitles.py  04_analyze_content.py  04b_prepare_summary_data.py  05_generate_report.py  run_all.py
